<resources>
	<string name="app_name">StartPlast</string>

	<string name="key">413435101644-r4p3kdd85b3v8pjl94m0rpfil7bvkc85.apps.googleusercontent.com</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<!-- Onbouarding  -->
	<string name="let_s_start">LET’S START</string>
	<string name="skip">Skip</string>
	<!-- Onbouarding  -->

	<!-- Login  -->
	<string name="start_plast">Start Plast</string>

	<!-- Button navigation  -->
	<string name="home">Home</string>
	<string name="my_profile">My Profile</string>
	<string name="notifications">Notifications</string>
	<string name="guide">Guide</string>
	<string name="plus99">99+</string>
	<!-- Button navigation  -->

	<string name="settings">Settings</string>
	<string name="add_review">Add review</string>
	<string name="add_place">Add Place</string>

	<string name="title_one">СКОБ! Привіт!</string>
	<string name="description_one">Знайомся - це нова роль у твоєму житті “пластун/пластунка”. І щоб пізнати справжнє пластування - велику гру, тобі необхідно підкорити твою першу вершину - стати дійсним членом Пласту! До цієї вершини вже прокладено маршрут і його ти можеш проходити у довільному порядку. На кожному етапі ти матимеш завдання, за які зможеш отримати пласткоіни (валюта) та обміняти їх на пластову атрибутику.  Цікаво, правда? :) Ми гарантуємо, твоя нова частина життя - пластування ще цікавіша та непередбачувана. Тож приготуйся до пригод. Вперед і вгору! І пам’ятай, ти завжди можеш задавати питання та просити про допомогу у віконечку “?”.</string>

	<string name="title_two">Знати що таке Пласт, поділяти мету та завдання організації</string>
	<string name="description_two">Вітаємо! Це перший Твій крок, давай знайомитись з нами ближче! Тут Ти дізнаєшся, що таке Пласт, хто такі пластуни, чим ми займаємось та про філософію нашої організації. Клікай на лінку та пізнавай! Давай розпочнемо нашу гру!</string>

	<string name="title_three">Зареєструватись в системі EPlastї</string>
	<string name="description_three">СКОБ! Друже тепер перед Тобою стоїть один з найважливіших кроків – зареєструватись в системі EPlast. EPlast – це система, яка об’єднує усе доросле членство організації. Опісля реєстарації, Ти зможеш називати Себе пластуном прихильником чи пластункою прихильницею. Заходь та реєструйся прямо зараз --&gt; EPlast. Інструкцію про те, як це робити можна переглянути тут. Успіхів Тобі!</string>

	<string name="title_four">Підписатись на всі електронні ресурси.</string>
	<string name="description_four">СКОБ! Не пропусти щось цікаве. Будь у курсі пластового життя! Підпишись на електронні ресурси: Facebook, PlastPortal, Instagram.</string>

	<string name="title_five">Мати пластовий однострій</string>
	<string name="description_five">СКОБ! Вітаємо у пластовій сім’ї! Тепер Ти можеш себе називати пластуном прихильником/ пластункою прихильницею і носити пластовий однострій. Якщо у Тебе іще немає пластового однострою, то можеш придбати його на сайті пластової крамниці «Скаут стиль». У крамничці Ти знайдеш всі елементи однострою. Пласт – це Велика Гра! Ми раді, що Ти граєш в неї разом з нами!</string>

	<string name="title_six">Пройти ознайомчий онлайн курс на платформі дистанційної освіти ВУМ «Пласт – український скаутинг».</string>
	<string name="description_six">СКОБ! Ти молодець! У Тебе є можливість поглибити свої знання про нашу Велику Гру та іще більше поринути в атмосферу пластування. Твій наступний крок це пройти онлайн курс на платформі дистанційної освіти ВУМ «Пласт – український скаутинг». та отримати сертифікат. Вперед! До пригод!</string>

	<string name="details">Деталі</string>

	<string name="dash">-   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   </string>
	<string name="register">Зареєструватися</string>
    <string name="close">Close</string>

    <string name="lock">Заблоковано</string>
    <string name="done">Зроблено</string>

	<string name="formatter_coins">%1$d пласткоінів</string>

</resources>
