<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/home" />

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_tab_profile"
            android:title="@string/my_profile" />
    <!--not clicking place for fab-->
    <item
            android:enabled="false"
            android:title="" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_tab_notification"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_guide"
        android:icon="@drawable/ic_tab_guide"
        android:title="@string/guide" />

</menu>
