<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorWhite"
	android:fitsSystemWindows="true"
	tools:context=".features.details.DetailsActivity"
	>

	<Button
		android:id="@+id/exit_btn"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:background="@drawable/ic_close"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/exit_btn"
		>

		<ImageView
			android:id="@+id/imageView2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="32dp"
			android:layout_marginEnd="32dp"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:src="@drawable/img_details"
			/>

		<TextView
			android:id="@+id/tv_details_page_title"
			style="@style/AppTheme.Login.Title"
			android:layout_width="0dp"
			android:layout_height="75dp"
			app:layout_constraintEnd_toEndOf="@+id/imageView2"
			app:layout_constraintStart_toStartOf="@+id/imageView2"
			app:layout_constraintTop_toBottomOf="@+id/imageView2"
			tools:text="@string/title_one"
			/>

		<TextView
			android:id="@+id/tv_details_description"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:ellipsize="end"
			android:scrollbars="vertical"
			android:textColor="@color/colorBlack"
			android:textSize="14sp"
			app:layout_constraintBottom_toTopOf="@+id/btn_details"
			app:layout_constraintEnd_toEndOf="@+id/imageView2"
			app:layout_constraintStart_toStartOf="@+id/imageView2"
			app:layout_constraintTop_toBottomOf="@+id/tv_details_page_title"
			tools:text="@string/description_one"
			/>

		<Button
			android:id="@+id/btn_details"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:layout_marginStart="48dp"
			android:layout_marginEnd="48dp"
			android:layout_marginBottom="32dp"
			android:background="@drawable/shape_rounded_ripple_blue"
			android:gravity="center"
			android:text="@string/done"
			android:textColor="@color/colorWhite"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="@+id/tv_details_description"
			app:layout_constraintStart_toStartOf="@+id/tv_details_description"
			/>

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>